Kubernetes/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: welcome
  labels:
    name: welcome
spec:
  containers:
    - name: welcome
      image: tohidazure/microservices:welcome
      ports:
        - containerPort: 8081
  imagePullSecrets:
    - name: docker-pwd
---
apiVersion: v1
kind: Pod
metadata:
  name: user
  labels:
    name: user
spec:
  containers:
    - name: user
      image: tohidazure/microservices:user
      ports:
        - containerPort: 8082
  imagePullSecrets:
    - name: docker-pwd
---
apiVersion: v1
kind: Pod
metadata:
  name: auth
  labels:
    name: auth
spec:
  containers:
    - name: auth
      image: tohidazure/microservices:auth
      ports:
        - containerPort: 8083
  imagePullSecrets:
    - name: docker-pwd
