Kubernetes/app.yml
# Welcome micro-service
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: welcome
  name: welcome
spec: 
  clusterIP: None
  ports:
    - name: welcome-service
      port: 8081
      targetPort: 8081
  selector: 
    app: welcome
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome
  labels:
    app: welcome
spec:
  replicas: 2
  selector:
    matchLabels:
      app: welcome
  template:
    metadata:
      labels:
        app: welcome
    spec:
      containers:
        - name: welcome-cont
          image: tohidazure/microservices:welcome
          ports:
            - containerPort: 8081
              name: welcome
      imagePullSecrets:
      - name: docker-pwd

# user micro-service
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: user
  name: user
spec: 
  clusterIP: None
  ports:
    - name: user-service
      port: 8082
      targetPort: 8082
  selector: 
    app: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user
  labels:
    app: user
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user-cont
          image: tohidazure/microservices:user
          ports:
            - containerPort: 8082
              name: user
      imagePullSecrets:
      - name: docker-pwd

# auth micro-service
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: auth
  name: auth
spec: 
  clusterIP: None
  ports:
    - name: auth-service
      port: 8083
      targetPort: 8083
  selector: 
    app: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth-cont
          image: tohidazure/microservices:auth
          ports:
            - containerPort: 8083
              name: auth
      imagePullSecrets:
      - name: docker-pwd
