Kubernetes/ingress.yml
# Welcome Microservice Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: welcome-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
spec:
  tls:
  - hosts:
      - "welcome.tohidcloud.store"
    secretName: nginx-tls-default
  rules:
  - host: welcome.tohidcloud.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: welcome
            port:
              number: 8081

---

# User Microservice Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
spec:
  tls:
  - hosts:
      - "user.tohidcloud.store"
    secretName: nginx-tls-default
  rules:
  - host: user.tohidcloud.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user
            port:
              number: 8082

---

# Auth Microservice Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    spec.ingressClassName: nginx
spec:
  tls:
  - hosts:
      - "auth.tohidcloud.store"
    secretName: nginx-tls-default
  rules:
  - host: auth.tohidcloud.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 8083
